# ai_scraper

./: .gitignore  TODO.md  compose.yml  pyproject.toml  scraper.old.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: main.py
src/ia_models/: llama.py  tokenizer.py
src/scraper/: __init__.py  main.py
